--- a/app/src/main/res/layout/chats_user_item.xml
+++ b/app/src/main/res/layout/chats_user_item.xml
@@ -15,8 +15,10 @@
         android:id="@+id/chat_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="10dp"
         android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
         android:layout_toEndOf="@id/user_image"
         android:layout_toRightOf="@id/user_image"
         android:fontFamily="@font/exoregular"
