--- a/app/src/main/res/layout/activity_my_notes_hometutor.xml
+++ b/app/src/main/res/layout/activity_my_notes_hometutor.xml
@@ -6,7 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".MyNotes_hometutor"
     android:padding="8dp">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_notes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#ffffff"
+        android:elevation="0dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
 
+        />
     <TextView
         android:id="@+id/textMyNotes_hometutor"
         android:layout_width="match_parent"
@@ -19,6 +27,7 @@
         android:text="My Notes"
         android:textColor="@android:color/black"
         android:textSize="20sp"
+        android:layout_below="@+id/toolbar_notes"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
