--- a/app/src/main/res/layout/noticeboard_item.xml
+++ b/app/src/main/res/layout/noticeboard_item.xml
@@ -117,9 +117,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="UpVote"
+            android:text="Like"
             android:backgroundTint="#9BCFC5"
-            android:drawableLeft="@drawable/ic_edit"
+            android:drawableLeft="@drawable/ic_baseline_thumb_up_24"
             android:drawableTint="#323232"
             android:fontFamily="@font/exoregular"
             />
@@ -131,7 +131,7 @@
             android:layout_weight="1"
             android:text="Contact"
             android:fontFamily="@font/exoregular"
-            android:drawableLeft="@drawable/ic_man"
+            android:drawableLeft="@drawable/ic_baseline_message_24"
             android:backgroundTint="#9BCFC5"
             />
 
